--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
                 <h6 class="titulo-categoria">ESCOLARIDADE</h6>
             </div>
             <div class="col-10">
+                    <ul>
+                            <li>Ensino Superior (08/2018 - Cursando)</li>
+                            <ul>
+                                <li>Tecnólogo em Design de Moda</li>
+                                <li>Faculdade Carlos Drummond de Andrade</li>
+                            </ul>
+                        </ul>
                 <ul>
                     <li>Ensino Superior (01/2018 - Trancado)</li>
                     <ul>
@@ -119,7 +126,7 @@
             </div>
         </div>
 
-        <div class="row row-margin">
+        <!-- <div class="row row-margin">
             <div class="col-2">
                 <h6 class="titulo-categoria">HABILIDADES</h6>
             </div>
@@ -127,9 +134,9 @@
                 <div class="row">
                     <div class="col-4">
                         <ul>
-                            <li>SISTEMAS OPERACIONAIS</li>
+                            <li>Pacote Office</li>
                             <ul>
-                                <li>Linux</li>
+                                <li>Excel</li>
                                 <li>Windows</li>
                             </ul>
                         </ul>
@@ -199,7 +206,7 @@
                 </div>
             </div>
         </div>
-
+ -->
 
 
         <footer>
