Datas do estagio

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="row row-margin-topo">
             <div class="col-5 text-left">
-                Nascimento: 16/06/1995 - São Paulo, SP <br>
+                Nascimento: 13/06/1995 - São Paulo, SP <br>
                 Rua Airton Senna, 538 - CEP: 08223-358
             </div>
             <div class="col-5 offset-2 text-right">
@@ -49,12 +49,12 @@
                 </ul>
 
                 <ul>
-                    <li>Estagio de Eventos de Moda com Izi Vieira (99/9999 – 99/9999)</li>
+                    <li>Estagio de Eventos de Moda com Izi Vieira (06/2015 – 12/2015)</li>
                     <ul>
                         <li>Piauí Moda House, Piauí Experience e Teresina Trend</li>
                         <li>Organização de eventos</li>
                         <li>Montagens de look</li>
-                        <li>Ajudante de desfile</li>
+                        <li>Backstage</li>
                     </ul>
                 </ul>
 
